@@ -25,7 +25,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Generating configuration..."
-				CommandLine="if not exist include\config.h call perl include\gen-win32-headers.pl ..\configure.ac &gt; include\config.h"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -43,7 +43,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="include;../src;../gl;.."
-				PreprocessorDefinitions="WIN32;_DEBUG;_USRDLL;GSASL_EXPORTS;HAVE_CONFIG_H;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE"
+				PreprocessorDefinitions="WIN32;_DEBUG;_USRDLL;GSASL_API=__declspec(dllexport);HAVE_CONFIG_H;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -103,7 +103,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Generating configuration..."
-				CommandLine="if not exist include\config.h call perl include\gen-win32-headers.pl ..\configure.ac &gt; include\config.h"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -120,7 +120,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="include;../src;../gl;.."
-				PreprocessorDefinitions="WIN32;NDEBUG;_USRDLL;GSASL_EXPORTS;HAVE_CONFIG_H;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE"
+				PreprocessorDefinitions="WIN32;NDEBUG;_USRDLL;GSASL_API=__declspec(dllexport);HAVE_CONFIG_H;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -808,10 +808,6 @@
 				</File>
 				<File
 					RelativePath="..\gl\hmac-md5.c"
-					>
-				</File>
-				<File
-					RelativePath="..\gl\malloc.c"
 					>
 				</File>
 				<File
